--- a/.github/workflows/docker-fx-test.yml
+++ b/.github/workflows/docker-fx-test.yml
@@ -1,19 +1,19 @@
 ---
-name: Docker Testnet
+name: Docker Test
 
 # yamllint disable-line rule:truthy
 on:
   pull_request:
     paths:
-      - '**/Dockerfile'
-      - '.github/workflows/docker-testnet.yml'
+      - 'Dockerfile'
+      - '.github/workflows/docker-fx-test.yml'
   push:
     branches:
       - "master"
       - "dev*"
     paths:
-      - '**/Dockerfile'
-      - '.github/workflows/docker-testnet.yml'
+      - 'Dockerfile'
+      - '.github/workflows/docker-fx-test.yml'
 
 jobs:
   Hadolint:
@@ -22,21 +22,26 @@ jobs:
       - uses: actions/checkout@v2
       - uses: brpaz/hadolint-action@master
         with:
-          dockerfile: testnet/Dockerfile
+          dockerfile: Dockerfile
   Docker-FX:
-    runs-on: ubuntu-latest
     needs: Hadolint
     container:
       image: functionx/fx-core:testnet-1.0
+    runs-on: ubuntu-latest
     steps:
       - run: fxcored init fx-zakir
-  Docker-Testnet:
+    strategy:
+      matrix:
+        tag:
+          - mainnet-1.0
+          - testnet-1.0
+  Docker:
     runs-on: ubuntu-latest
     needs: Hadolint
     steps:
       - uses: actions/checkout@v2
       - name: Build
-        run: docker build --tag fxcore testnet
+        run: docker build --tag fxcore --build-arg FXNET=${{ matrix.net }} .
       - name: Create config and data dirs
         run: mkdir -m=777 -v config data
       - name: Run
@@ -45,3 +50,8 @@ jobs:
           -v "$PWD"/config:/home/fxcore/.fxcore/config:rw
           -v "$PWD"/data:/home/fxcore/.fxcore/data:rw
           fxcore init fx-zakir -o
+    strategy:
+      matrix:
+        net:
+          - mainnet
+          - testnet
