--- a/testnet/docker-compose.yml
+++ b/testnet/docker-compose.yml
@@ -1,10 +1,25 @@
 ---
 version: "3"
 services:
-  fxcore-testnet:
+  init:
+    build: ..
+    container_name: fxcore-testnet-init
+    command: /opt/scripts-init/init.sh
+    entrypoint: bash
+    environment:
+      - FXHOME=/home/fxcore/.fxcore
+      - HOME=/home/fxcore
+    image: fxcore:testnet
+    volumes:
+      - ./scripts-init:/opt/scripts-init
+      - fxcore-testnet-config:/home/fxcore/.fxcore/config:rw
+      - fxcore-testnet-data:/home/fxcore/.fxcore/data:rw
+  node:
     build: ..
     command: ["start"]
     container_name: fxcore-testnet
+    depends_on:
+      - init
     deploy:
       restart_policy:
         condition: on-failure
@@ -12,15 +27,16 @@ services:
         max_attempts: 5
         window: 120s
     environment:
+      - FXHOME=/home/fxcore/.fxcore
       - HOME=/home/fxcore
     image: fxcore:testnet
     logging:
       driver: syslog
     ports:
-      - 1317:1317
-      - 26656:26656
-      - 26657:26657
-      - 26660:26660
+      - 1317:1317  # REST API
+      - 26656:26656  # P2P
+      - 26657:26657  # RPC
+      - 26660:26660  # ABCI
     restart: unless-stopped
     ulimits:
       nproc: 65535
