Uses entrypoint script instead of init

--- a/mainnet/docker-compose.yml
+++ b/mainnet/docker-compose.yml
@@ -1,35 +1,13 @@
 ---
 version: "3.4"
 services:
-  init:
-    build:
-      context: ..
-      network: host
-    container_name: fxcore-mainnet-init
-    command: /opt/scripts-init/init.sh
-    entrypoint: bash
-    environment:
-      - FXHOME=/home/fxcore/.fxcore
-      - HOME=/home/fxcore
-    image: fxcore:mainnet
-    volumes:
-      - ./scripts-init:/opt/scripts-init
-      - fxcore-mainnet-config:/home/fxcore/.fxcore/config:rw
-      - fxcore-mainnet-data:/home/fxcore/.fxcore/data:rw
   node:
     build:
       context: ..
       network: host
-    command: ["start"]
-    container_name: fxcore-mainnet
-    depends_on:
-      - init
-    deploy:
-      restart_policy:
-        condition: on-failure
-        delay: 5s
-        max_attempts: 5
-        window: 120s
+    command: /opt/scripts/entrypoint.sh
+    container_name: fxcore-mainnnet
+    entrypoint: bash
     environment:
       - FXHOME=/home/fxcore/.fxcore
       - HOME=/home/fxcore
@@ -50,6 +28,7 @@ services:
     volumes:
       - fxcore-mainnet-config:/home/fxcore/.fxcore/config:rw
       - fxcore-mainnet-data:/home/fxcore/.fxcore/data:rw
+      - ./scripts:/opt/scripts:ro
 volumes:
   fxcore-mainnet-config:
     external: true
