--- a/mainnet/docker-compose.yml
+++ b/mainnet/docker-compose.yml
@@ -1,8 +1,10 @@
 ---
-version: "3.4"
+version: "3.5"
 services:
   node:
     build:
+      args:
+        IMAGETAG: mainnet-1.0
       context: ..
       network: host
     command: /opt/scripts/entrypoint.sh
