--- a/.github/workflows/docker-fx-test.yml
+++ b/.github/workflows/docker-fx-test.yml
@@ -43,12 +43,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Build
-        run: >-
-          docker build
-          --build-arg FXNET=${{ matrix.net }}
-          --build-arg IMAGETAG=${{ matrix.net }}-1.0
-          --tag fxcore
-          .
+        run: docker build --build-arg FXNET=${{ matrix.net }} --tag fxcore .
       - name: Create config and data dirs
         run: mkdir -m=777 -v config data
       - name: Run init
