--- a/testnet/docker-compose.yml
+++ b/testnet/docker-compose.yml
@@ -12,6 +12,7 @@ services:
     entrypoint: bash
     environment:
       - FXHOME=/home/fxcore/.fxcore
+      - FXNET=testnet
       - HOME=/home/fxcore
     image: fxcore:testnet
     logging:
@@ -30,7 +31,7 @@ services:
     volumes:
       - fxcore-testnet-config:/home/fxcore/.fxcore/config:rw
       - fxcore-testnet-data:/home/fxcore/.fxcore/data:rw
-      - ./scripts:/opt/scripts:ro
+      - ../scripts:/opt/scripts:ro
 volumes:
   fxcore-testnet-config:
     external: true
