--- a/testnet/docker-compose.yml
+++ b/testnet/docker-compose.yml
@@ -16,7 +16,8 @@ services:
       - ../monitoring/grafana/config.env
     restart: always
     networks:
-      - fx-net
+      fx-net:
+        ipv4_address: 10.10.10.4
   node:
     build:
       args:
@@ -60,7 +61,8 @@ services:
       - 9095:9090
     restart: always
     networks:
-      - fx-net
+      fx-net:
+        ipv4_address: 10.10.10.3
     volumes:
       - ../monitoring/prometheus/:/etc/prometheus/
       - prometheus_data:/prometheus
