--- a/testnet/docker-compose.yml
+++ b/testnet/docker-compose.yml
@@ -30,11 +30,11 @@ services:
     environment:
       - FXHOME=/home/fxcore/.fxcore
       - FXNET=testnet
-      - FXSNAPURL=https://fx-mainnet.s3.amazonaws.com/fxcore-snapshot-mainnet-2021-11-22.tar.gz
+      - FXSNAPURL=https://fx-testnet.s3.amazonaws.com/fxcore-snapshot-testnet-2021-11-22.tar.gz
       - HOME=/home/fxcore
     image: fxcore:testnet
     networks:
-      fx-net:
+      fxnet-testnet:
         ipv4_address: 10.10.10.2
     ports:
       - 1317:1317  # REST API
@@ -62,13 +62,13 @@ services:
       - 9095:9090
     restart: always
     networks:
-      fx-net:
+      fxnet-testnet:
         ipv4_address: 10.10.10.3
     volumes:
       - ../monitoring/prometheus/:/etc/prometheus/
       - prometheus_data:/prometheus
 networks:
-  fx-net:
+  fxnet-testnet:
     driver: bridge
     ipam:
       config:
