--- a/testnet/docker-compose.yml
+++ b/testnet/docker-compose.yml
@@ -16,7 +16,7 @@ services:
       - ../monitoring/grafana/config.env
     restart: always
     networks:
-      fx-net:
+      fxnet-testnet:
         ipv4_address: 10.10.10.4
   node:
     build:
