Exposes EVM port

--- a/mainnet/docker-compose.yml
+++ b/mainnet/docker-compose.yml
@@ -40,6 +40,7 @@ services:
       driver: syslog
     ports:
       - 1317:1317  # REST API
+      - 8545:8545  # EVM
       - 26656:26656  # P2P
       - 26657:26657  # RPC
       - 26660:26660  # ABCI
