Pre-commit: Disables markdownlint due to errors
Refs: https://github.com/jumanjihouse/pre-commit-hooks/issues/106

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -17,7 +17,7 @@ repos:
       - id: forbid-binary
         exclude: ^(lib|conf/servers)/.*$
       - id: git-check     # Configure in .gitattributes
-      - id: markdownlint  # Configure in .mdlrc
+#     - id: markdownlint  # Configure in .mdlrc
       - id: require-ascii
       - id: script-must-have-extension
       - id: shellcheck
