--- a/mainnet/docker-compose.yml
+++ b/mainnet/docker-compose.yml
@@ -41,8 +41,11 @@ services:
     ports:
       - 1317:1317  # REST API
       - 8545:8545  # EVM
+      - 8546:8546  # EVM?
+      - 9090:9090
       - 26656:26656  # P2P
       - 26657:26657  # RPC
+      - 26660:26660
     restart: unless-stopped
     ulimits:
       nproc: 65535
