Adds UNSAFE_SKIP_BACKUP

--- a/mainnet/docker-compose.yml
+++ b/mainnet/docker-compose.yml
@@ -28,10 +28,12 @@ services:
     container_name: fxcore-mainnet
     entrypoint: bash
     environment:
+      - DAEMON_ALLOW_DOWNLOAD_BINARIES=false
       - FXHOME=/home/fxcore/.fxcore
       - FXNET=mainnet
       - FXSNAPURL=https://fx-mainnet.s3.amazonaws.com/fxcore-snapshot-mainnet-2022-06-27.tar.gz
       - HOME=/home/fxcore
+      - UNSAFE_SKIP_BACKUP=true  # Skips performing a backup.
     image: fxcore:mainnet
     networks:
       fxnet-mainnet:
