Fixes Error: failed to export gensis file: genesis doc must include non-empty chain_id
Refs: https://github.com/FunctionX/fx-core/issues/84

--- a/.github/workflows/docker-fx-test.yml
+++ b/.github/workflows/docker-fx-test.yml
@@ -51,7 +51,7 @@ jobs:
           docker run
           -v "$PWD"/config:/home/fxcore/.fxcore/config:rw
           -v "$PWD"/data:/home/fxcore/.fxcore/data:rw
-          fxcore init fx-zakir --overwrite
+          fxcore init fx-zakir --overwrite --chain-id fx-zakir
     strategy:
       matrix:
         net:
