--- a/testnet/docker-compose.yml
+++ b/testnet/docker-compose.yml
@@ -28,6 +28,9 @@ services:
     container_name: fxcore-testnet
     entrypoint: bash
     environment:
+      - DAEMON_ALLOW_DOWNLOAD_BINARIES=false
+      - DAEMON_NAME=fxcored
+      - DAEMON_HOME=/home/fxcore/.fxcore
       - FXHOME=/home/fxcore/.fxcore
       - FXNET=testnet
       - FXSNAPURL=https://testnet-fx.s3.amazonaws.com/fxcore-pruned-snapshot-testnet-2023-11-16.tar.gz
